[package]
name = "awc-uds"
version = "0.1.0"
edition = "2018"
authors = ["Alexander Polakov <plhk@sdf.org>"]
license = "MIT"

[dependencies]
actix-tls = "3.0.0-beta.8"
actix-service = "2.0.1"
awc = { version = "3.0.0-beta.9", default-features = false }
actix-rt = "2.2"

[dev-dependencies]
actix-web = "4.0.0-beta.9"
tempfile = "3.2"
