[package]
name = "awc-uds"
version = "0.1.0"
edition = "2018"
authors = ["Alexander Polakov <plhk@sdf.org>"]
license = "MIT"
description = "Unix socket connector for awc"
repository = "https://github.com/polachok/awc-uds/"
homepage = "https://github.com/polachok/awc-uds/"
documentation = "https://docs.rs/awc-uds"

[dependencies]
actix-tls = "3.0.0-beta.8"
actix-service = "2.0.1"
awc = { version = "3.0.0-beta.9", default-features = false }
actix-rt = "2.2"

[dev-dependencies]
actix-web = "4.0.0-beta.9"
tempfile = "3.2"
