[package]
name = "awc-uds"
version = "0.1.0"
edition = "2018"
authors = ["Alexander Polakov <plhk@sdf.org>"]
license = "MIT"
description = "Unix socket connector for awc"
repository = "https://github.com/polachok/awc-uds/"
homepage = "https://github.com/polachok/awc-uds/"
documentation = "https://docs.rs/awc-uds"

[dependencies]
actix-tls = "3.0.2"
actix-service = "2.0.2"
actix-rt = "2.2"
awc = { version = "3.0.0-beta.19", default-features = false }


[dev-dependencies]
tempfile = "3.2"
actix-web = "4.0.0-beta.21"
